--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,8 +47,10 @@ build_script:
   - cmd: mainTest.exe
   - cmd: colorTest.exe
   - cmd: envTermMissing.exe
+  - cmd: cursorTest.exe
   - cmd: OpenCppCoverage --sources C:\projects\rang --export_type=binary:envTermMissingReport.bin -- envTermMissing.exe
   - cmd: OpenCppCoverage --sources C:\projects\rang --export_type=binary:mainTestReport.bin -- mainTest.exe
   - cmd: OpenCppCoverage --sources C:\projects\rang --export_type=binary:colorTestReport.bin -- colorTest.exe
-  - cmd: OpenCppCoverage --sources C:\projects\rang --export_type=cobertura:overallReport.xml --input_coverage=mainTestReport.bin --input_coverage=envTermMissingReport.bin --input_coverage=colorTestReport.bin
+  - cmd: OpenCppCoverage --sources C:\projects\rang --export_type=binary:cursorTestReport.bin -- cursorTest.exe
+  - cmd: OpenCppCoverage --sources C:\projects\rang --export_type=cobertura:overallReport.xml --input_coverage=mainTestReport.bin --input_coverage=envTermMissingReport.bin --input_coverage=colorTestReport.bin --input_coverage=cursorTestReport.bin
   - cmd: codecov --root ../.. --no-color --disable gcov -f overallReport.xml
